# lis-vision-flight

./: .gitignore  .gitmodules  LICENSE  README.md
hardware/: README.md
hardware/3d_prints/: airspeed_sensor_holder.SLDPRT  airspeed_sensor_holder.STL  firefly_camera_bracket.SLDPRT  firefly_camera_bracket.STL  gnss_antenna_holder.STEP  gnss_antenna_holder.STL  gps_antenna_holder.SLDPRT  jetson_nano_holder.SLDPRT  jetson_nano_holder.STL  lidar_standoff.SLDPRT  lidar_standoff.STL  nose_plate.SLDPRT  nose_plate.STL  pixhawk_bay.SLDPRT  pixhawk_bay.STL  pixhawk_bracket_clip.SLDPRT  pixhawk_bracket_clip.STL  pixhawk_foot.SLDPRT  pixhawk_foot.STL  px4flow_standoff.SLDPRT  px4flow_standoff.STL
hardware/carrier_board_nano/: Job1.OutJob  csi_cam.SchDoc  hdmi.SchDoc  jetson_nano_module.SchDoc  nano_carrier_V_1_1.PrjPcb  nano_carrier_V_1_1.PrjPcbStructure  nano_carrier_pcb.PcbDoc.htm  nano_carrier_pcb.html  nano_carrier_pcb.layerset  nano_carrier_pcb.txt  notes.SchDoc  power.SchDoc  supply.SchDoc  uSDcard.SchDoc  uart.SchDoc  usb.SchDoc
hardware/carrier_board_nano/CAD/: pcb_frame.SLDPRT
hardware/carrier_board_nano/Output/: Bill of Materials-nano_carrier_V_1_1.xlsx  Bill of Materials-nano_carrier_V_1_1_old.xlsx  Bill of Materials-nano_carrier_V_1_1_tmp.xlsx  Pick Place for nano_carrier_pcb.txt  nano_carrier_V_1_1_BOM_NextPCB.xlsx
hardware/carrier_board_nano/Output/BOM/: Bill of Materials-nano_carrier_V_1_1.xlsx
hardware/carrier_board_nano/Output/Gerber/: nano_carrier_pcb-macro.APR_LIB  nano_carrier_pcb.EXTREP  nano_carrier_pcb.GBL  nano_carrier_pcb.GBO  nano_carrier_pcb.GBS  nano_carrier_pcb.GM1  nano_carrier_pcb.GM11  nano_carrier_pcb.GP1  nano_carrier_pcb.GP2  nano_carrier_pcb.GTL  nano_carrier_pcb.GTO  (+5 more)
hardware/carrier_board_nano/Project Outputs for nano_carrier_V_1_1/: Design Rule Check - nano_carrier_pcb.drc  Design Rule Check - nano_carrier_pcb.html
software/: README.md
software/carrier_board_nano/: README.md  l4t_create_default_user.sh
software/lis-vision-flight-ros/: CMakeLists.txt  package.xml  requirements.txt
software/lis-vision-flight-ros/config/: 19308195.yaml  controller_params.yaml  forward.yaml  px4_parameters.params
software/lis-vision-flight-ros/launch/: flir_camera.launch  run.launch  vision_gnss_controller.launch
software/lis-vision-flight-ros/scripts/: vision_gnss_controller.py
(+5 files in other folders)
